# Artie

./: .gitignore  CONTRIBUTING.md  README.md  artie-tool.py  requirements.txt
.circleci/: config.yml
.github/actions/: artie-setup-base.yml
.github/workflows/: release.yml  tests.yml
artie-admind/: artie-admind.service  install.sh  uninstall.sh
artie-common/: README.md
artie-computed/: install.sh
artie00/: README.md  artie00.yml
artietool/: build.py  common.py  container_eyebrows_driver.py  container_mouth_driver.py  docker.py  fw_eyebrows.py  fw_mouth.py  kube.py  release.py  test.py  yocto_controller_module.py
artietool/compose-files/: compose.driver-eyebrows.yaml  compose.driver-mouth.yaml  compose.logging.yaml  compose.metrics.yaml  compose.telemetry.yaml  launch-manual.py
artietool/deploy/: deploy.py
artietool/infrastructure/: artifact.py  dependency.py  deploy_job.py  docker_build_job.py  docker_compose_test_suite_job.py  docker_manifest_job.py  file_transfer_from_container_job.py  hardware_test_job.py  job.py  picofw_build_job.py  result.py  run.py  single_container_cli_suite_job.py  single_container_sanity_suite_job.py  task.py  task_importer.py  test_job.py  yocto_build_job.py
artietool/install/: install.py  uninstall.py
artietool/release/: release.py
artietool/tasks/: README.md
artietool/test/: interpret_test_output.py  test.py
cli/: README.md  cli.py  pyproject.toml  setup.py
cli/artiecli/: apiclient.py  cli.py  common.py
cli/artiecli/modules/: controller.py  eyebrows.py  mouth.py  reset.py
cli/artiecli/modules/hardware/: boardconfig.py  gpio.py  i2c.py  util.py
cli/test/: Dockerfile
docs/: todo.md
docs/architecture/: artie-overview.md  data-collection-architecture.md  overview.md  security.md  telemetry-architecture.md
docs/building/: 3d-printable-parts-list.md  building-artie-main.md  parts-list.md
docs/contributing/: artie-cli-contributions.md  artie-tool-contributions.md  artie-workbench-contributions.md  chart-contributions.md  development-environment.md  (+10 more)
electrical-schematics/: README.md
firmware/: README.md
firmware/eyebrows/src/: CMakeLists.txt  main.c
firmware/eyebrows/src/board/: errors.c  pinconfig.h  types.h
firmware/eyebrows/src/cmds/: cmds.c  cmds.h
firmware/eyebrows/src/graphics/: commongfx.c  eyebrowsgfx.c  graphics.c  graphics.h  mouthgfx.c
firmware/eyebrows/src/graphics/lcd/Config/: DEV_Config.c
firmware/eyebrows/src/graphics/lcd/GUI/: GUI_Paint.c  GUI_Paint.h
firmware/eyebrows/src/graphics/lcd/LCD/: LCD_0in96.c  LCD_1in14.c  LCD_1in14_V2.c  LCD_1in44.c  LCD_1in8.c
firmware/eyebrows/src/leds/: leds.c  leds.h
firmware/eyebrows/src/sensors/: imu.c  sensors.c  spi_interface.c  spi_interface.h  temp.c  temp.h
firmware/eyebrows/src/servo/: servo.c  servo.h
firmware/eyebrows/test/i2c/src/: CMakeLists.txt
firmware/mouth/: CMakeLists.txt  README.md
firmware/mouth/test/: test.py
firmware/mouth/test/i2c/src/: CMakeLists.txt
firmware/mouth/test/i2c/src/cmds/: cmds.c
firmware/mouth/test/i2c/src/graphics/: commongfx.h  eyebrowsgfx.h
firmware/mouth/test/i2c/src/graphics/lcd/GUI/: GUI_Paint.c
firmware/mouth/test/i2c/src/graphics/lcd/LCD/: LCD_0in96.h  LCD_1in14.h  LCD_1in14_V2.c  LCD_1in3.h  LCD_1in44.h  LCD_1in54.c  LCD_1in8.c
firmware/mouth/test/i2c/src/leds/: leds.c
firmware/reset/src/: CMakeLists.txt  main.c
firmware/reset/src/board/: types.h
framework/: artie-tool.py  requirements.txt
framework/cli/: README.md  pyproject.toml  setup.py
framework/cli/artiecli/: apiclient.py  cli.py  common.py
framework/cli/artiecli/modules/: controller.py  eyebrows.py  mouth.py  reset.py
framework/cli/test/: Dockerfile  integration_test_profile.json  unit_test_profile.json
framework/libraries/artie-gpio/: README.md  pyproject.toml  setup.py
framework/libraries/artie-gpio/src/artie_gpio/: gpio.py  metrics.py
framework/workbench/: License  README.md  pyproject.toml  ui-flow.md  workbench.py
framework/workbench/comms/: api_server.py  artie_serial.py  tool.py
framework/workbench/gui/: __init__.py
framework/workbench/gui/graphics/: __init__.py  robot_icon.py
framework/workbench/gui/utils/: status_fetcher.py
framework/workbench/gui/widgets/: experiment_tab.py  hardware_tab.py  logging_tab.py  menubar.py  metrics_tab.py  sensors_tab.py  software_tab.py  status_icon.py  teleop_tab.py
framework/workbench/gui/windows/: deploy_chart_dialog.py  main_window.py  new_artie_wizard.py  settings_dialog.py  switch_artie_dialog.py
framework/workbench/gui/windows/new_artie_pages/: complete_page.py  credentials_page.py  deploy_page.py  install_page.py  ip_address_page.py  name_page.py  power_connection_page.py  serial_connection_page.py  test_page.py  wifi_check_connection_page.py  wifi_selection_page.py
framework/workbench/model/: artie_profile.py  settings.py
framework/workbench/util/: artie_secrets.py
framework/workbench/workbench/: workbench.py
framework/workbench/workbench/comms/: artie_serial.py  tool.py
framework/workbench/workbench/gui/: colors.py
framework/workbench/workbench/gui/utils/: __init__.py  status_fetcher.py
framework/workbench/workbench/gui/widgets/: experiment_tab.py  hardware_tab.py  logging_tab.py  menubar.py  metrics_tab.py
framework/workbench/workbench/gui/windows/: __init__.py  colors.py  deploy_chart_dialog.py  new_artie_wizard.py  settings_dialog.py
framework/workbench/workbench/gui/windows/new_artie_pages/: complete_page.py  credentials_page.py  deploy_page.py  install_page.py  ip_address_page.py  name_page.py  power_connection_page.py  serial_connection_page.py  test_page.py  wifi_check_connection_page.py  wifi_selection_page.py
framework/workbench/workbench/model/: settings.py
framework/workbench/workbench/stylesheets/: qt_green.qss
framework/workbench/workbench/util/: error.py  log.py  qutil.py
libraries/artie-util/: README.md  pyproject.toml  setup.py
libraries/artie-util/src/artie_util/: artie_logging.py  boardconfig_controller.py  constants.py  dns.py  util.py
mechanical-schematics/: README.md
software/: utils.py
(+375 files in other folders)
