[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "artiecli"
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.6"
license = { text = "MIT" }
dependencies = [
    "numpy",
    "smbus2",
    "RPi.GPIO",
]

[project.scripts]
artie-cli = "artiecli.cli:main"
