[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "artiecli"
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "artie-i2c",
    "dbus-python",
    "zerorpc",
]

[project.scripts]
artie-cli = "artiecli.cli:main"
