[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "artiecli"
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.10,<3.12"
license = { text = "MIT" }
dependencies = [
    "requests<2.29.0",
    "artie-tooling>=0.0.1",
    "urllib3<2.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
remote = [
    "rpyc==5.3.1",
]

[project.scripts]
artie-cli = "artiecli.cli:main"
