[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "artieworkbench"
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.10"
license = { text = "LGPL-3.0-or-later" }
dependencies = [
    "PyQt6>=6.7.1"
]

[project.scripts]
artie-workbench = "workbench.workbench:main"
