[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "artie-util"
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "opentelemetry-api==1.17.0",
    "opentelemetry-sdk==1.17.0",
    "opentelemetry-exporter-otlp==1.17.0",
    "opentelemetry-exporter-prometheus==1.12.0rc1",

]
